--- a/.github/workflows/patient-service.yaml
+++ b/.github/workflows/patient-service.yaml
@@ -1,4 +1,4 @@
-name: patient-service:CI
+name: patient-service-CI
 
 on:
   push:
@@ -13,20 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
           password: ${{ secrets.DOCKER_REGISTRY_PAT }} 
 
-
       - name: Build Docker Image for patient-service
-        run:
-          docker build -t ${{ secrets.DOCKER_REGISTRY_USER }}/patient-service:latest -f dockerfile .
+        run: docker build -t ${{ secrets.DOCKER_REGISTRY_USER }}/patient-service:latest -f dockerfile .
         working-directory: hospital-management/patient-service
 
       - name: Push Docker Image for patient-service
-        run: 
-          docker push ${{secrets.DOCKER_REGISTRY_USER}}/patient-service:latest
- 
+        run: docker push ${{ secrets.DOCKER_REGISTRY_USER }}/patient-service:latest
