--- a/.github/workflows/directory-service.yaml
+++ b/.github/workflows/directory-service.yaml
@@ -1,4 +1,4 @@
-name: directory-service:CI
+name: directory-service-CI
 
 on:
   push:
@@ -19,12 +19,9 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
           password: ${{ secrets.DOCKER_REGISTRY_PAT }} 
 
-
       - name: Build Docker Image for directory-service
-        run: 
-          docker build -t ${{ secrets.DOCKER_REGISTRY_USER}}/directory-service:latest -f dockerfile .
+        run: docker build -t ${{ secrets.DOCKER_REGISTRY_USER }}/directory-service:latest -f dockerfile .
         working-directory: hospital-management/directory-service
 
       - name: Push Docker Image for directory-service
-        run: 
-          docker push ${{secrets.DOCKER_REGISTRY_USER}}/directory-service:latest 
+        run: docker push ${{ secrets.DOCKER_REGISTRY_USER }}/directory-service:latest
