--- a/.github/workflows/api-gateway-service.yaml
+++ b/.github/workflows/api-gateway-service.yaml
@@ -1,4 +1,4 @@
-name: api-gateway-CI
+name: Build and Push Docker Images
 
 on:
   push:
@@ -11,17 +11,22 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_REGISTRY_PAT }} 
+          password: ${{ secrets.DOCKER_REGISTRY_PAT }}
 
       - name: Build Docker Image for api-gateway
-        run: docker build -t ${{ secrets.DOCKER_REGISTRY_USER }}/api-gateway:latest -f dockerfile .
+        run: 
+          docker build -t ${{ secrets.DOCKER_REGISTRY_USER}}/api-gateway:latest -f dockerfile .
         working-directory: hospital-management/api-gateway
+
+      - name: Push Docker Image for api-gateway
+        run: 
+          docker push ${{secrets.DOCKER_REGISTRY_USER}}/api-gateway:latest
 
       - name: Push Docker Image for api-gateway
         run: docker push ${{ secrets.DOCKER_REGISTRY_USER }}/api-gateway:latest
