--- a/.github/workflows/appointment-service.yaml
+++ b/.github/workflows/appointment-service.yaml
@@ -1,4 +1,4 @@
-name: appointment-service:CI
+name: Build and Push Docker Images
 
 on:
   push:
@@ -11,19 +11,19 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
+
+      - name: Build Docker Image
+        run: 
+          docker build -t ${{ secrets.DOCKER_REGISTRY_USER }}/appointment-service:latest -f dockerfile .
+        working-directory: hospital-management/appointment-service
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_REGISTRY_PAT }} 
+          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
 
-      - name: Build Docker Image for appointment-service
+      - name: Push Docker Image
         run: 
-          docker build -t ${{ secrets.DOCKER_REGISTRY_USER }}/appointment-service:latest -f dockerfile .
-        working-directory: hospital-management/appointment-service
-
-      - name: Push Docker Image for appointment-service
-        run: 
-          docker push ${{ secrets.DOCKER_REGISTRY_USER }}/appointment-service:latest 
+          docker push ${{secrets.DOCKER_REGISTRY_USER}}/appointment-service:latest
