--- a/.github/workflows/appointment-service.yaml
+++ b/.github/workflows/appointment-service.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
+          password: ${{ secrets.DOCKER_REGISTRY_PAT }}
 
       - name: Push Docker Image
         run: 
