--- a/.github/workflows/case-service.yaml
+++ b/.github/workflows/case-service.yaml
@@ -1,4 +1,4 @@
-name: case-service:CI
+name: Build and Push Docker Images
 
 on:
   push:
@@ -11,14 +11,13 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_REGISTRY_PAT }} 
-
+          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
 
       - name: Build Docker Image for case-service
         run: 
@@ -27,4 +26,4 @@ jobs:
 
       - name: Push Docker Image for case-service
         run: 
-          docker push ${{secrets.DOCKER_REGISTRY_USER }}/case-service:latest 
+          docker push ${{secrets.DOCKER_REGISTRY_USER }}/case-service:latest
